--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.googlecode.the-fascinator.plugins</groupId>
 	<artifactId>plugin-roles-ldap</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>The Fascinator - Plugin - Roles - LDAP</name>
-	<description></description>
-	<url></url>
+	<description />
+	<url />
 	<parent>
 		<groupId>com.googlecode.the-fascinator</groupId>
 		<artifactId>fascinator-plugins</artifactId>
-		<version>1.1.2-SNAPSHOT</version>
+		<version>1.1.2</version>
 	</parent>
 	<properties>
 		<fascinator.version>1.1.2-SNAPSHOT</fascinator.version>
@@ -20,17 +19,17 @@
 		<dependency>
 			<groupId>com.googlecode.the-fascinator</groupId>
 			<artifactId>fascinator-common</artifactId>
-			<version>${fascinator.version}</version>
+			<version>1.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.googlecode.the-fascinator</groupId>
 			<artifactId>fascinator-plugin-api</artifactId>
-			<version>${fascinator.version}</version>
+			<version>1.1.2</version>
 		</dependency>
 		<dependency>
             <groupId>com.googlecode.the-fascinator</groupId>
             <artifactId>fascinator-vocabulary</artifactId>
-            <version>${fascinator.version}</version>
+            <version>1.1.2</version>
         </dependency>
 		<dependency>
 			<groupId>commons-codec</groupId>
@@ -43,13 +42,13 @@
 		<dependency>
 			<groupId>com.googlecode.the-fascinator.plugins</groupId>
 			<artifactId>plugin-authentication-ldap</artifactId>
-			<version>${project.version}</version>
+			<version>1.0</version>
 		</dependency>
 	</dependencies>
   <scm>
     <url>https://github.com/the-fascinator-contrib/plugin-roles-ldap.git</url>
     <developerConnection>scm:git:https://github.com/the-fascinator-contrib/plugin-roles-ldap.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>plugin-roles-ldap-1.0</tag>
   </scm>
     <repositories>
         <repository>
